menu button, javascript, rotate

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 // importanto a partial que contem as variaveis e funcoes scss
 @import 'config';
+@import 'menu';
 
 // o asterisco serve para todo conteudo da pagina
 * {
