--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 // importanto a partial que contem as variaveis e funcoes scss
 @import 'config';
 @import 'menu';
+@import 'mobile';
 
 // o asterisco serve para todo conteudo da pagina
 * {
