--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,6 +47,17 @@
             height: 150px;
         }
     }
+
+    .about-info{
+        grid-template-areas: 
+            'bioimage'
+            'bio'
+            'job1'
+            'job2'
+            'job3';
+        // significa que sera dividida em 1 fracao igual, 1 div para cada
+        grid-template-columns: 1fr;
+    }
 }
 
 // smartphones
