--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,6 @@
 // importanto a partial que contem as variaveis e funcoes scss
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
 // o asterisco serve para todo conteudo da pagina
 * {
@@ -11,7 +10,7 @@
 body{
     @include background();
     background: $primary-color;
-    color: #fff;
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -57,7 +56,9 @@ header{
 
 main{
     padding: 4rem;
-    height: 100%;
+    //height: 100%;
+    // para se ter um rodape fixo embaixo, no caso 60px eh a altura que determinamos do footer
+    min-height: calc(100vh -60px);
 
     .icons{
         margin-top: 1rem;
@@ -82,3 +83,55 @@ main{
         }
     }
 }
+
+.about-info{
+    display: grid;
+    // define um espaco entre as grids
+    grid-gap: 30px;
+    grid-template-areas: 
+        'bioimage bio bio'
+        'job1 job2 job3';
+    // significa que sera dividida em 3 fracoes iguais, 3 divs iguais
+    grid-template-columns: repeat(3, 1fr);
+
+    .bio-image{
+        grid-area: bioimage;
+        margin: auto;
+        border-radius: 50%;
+        border: solid 3px $secondary-color;
+    }
+    
+    .bio{
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
+    
+    .job-1{
+        grid-area: job1;
+    }
+    
+    .job-2{
+        grid-area: job2;
+    }
+    
+    .job-3{
+        grid-area: job3;
+    }
+    
+    .job{
+        background: lighten($primary-color, 5);
+        padding: 0.5rem;
+        border-bottom: solid 5px $secondary-color;
+    }
+}
+
+#main-footer{
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color,10);
+    color: set-text-color($primary-color);
+    height: 60px;
+}
+
+// precisa estar embaixo de tudo pois queremos que as medias queries executem depois de todo css
+@import 'mobile';
