--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,18 @@
 // widescreens
 @include mediaXl{
 
+    .projects{
+        grid-template-columns: repeat(4, 1fr);
+    }
+
 }
 
 // desktops and laptops
 @include mediaLg{
-    
+
+    .projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 // tablets and small laptops
@@ -42,7 +49,7 @@
         transform: translate3d(100%,0,0);
 
         .portrait{
-            background: url('../img/portrait_small.jpg');
+            background: url('../img/portrait_small.png');
             width: 150px;
             height: 150px;
         }
@@ -58,6 +65,10 @@
         // significa que sera dividida em 1 fracao igual, 1 div para cada
         grid-template-columns: 1fr;
     }
+
+    .projects{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 // smartphones
@@ -65,6 +76,10 @@
 
     main#home h1{
         margin-top: 10vh;
+    }
+
+    .projects{
+        grid-template-columns: 1fr;
     }
     
 }
