--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,7 +58,7 @@ main{
     padding: 4rem;
     //height: 100%;
     // para se ter um rodape fixo embaixo, no caso 60px eh a altura que determinamos do footer
-    min-height: calc(100vh -60px);
+    min-height: calc(100vh - 60px);
 
     .icons{
         margin-top: 1rem;
@@ -123,6 +123,54 @@ main{
         padding: 0.5rem;
         border-bottom: solid 5px $secondary-color;
     }
+}
+
+// work-projects
+
+.projects{
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.7rem;
+
+    img{
+        width: 100%;
+        border: solid 3px #fff;
+
+        &:hover{
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut();
+        }
+    }
+}
+
+// button styles
+
+.btn{
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+
+    &:hover{
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark{
+    // extendeu as configuracoes da classe btn para essa
+    @extend .btn;
+    background: darken($primary-color,50);
+    color: #fff;
+}
+
+.btn-light{
+    // extendeu as configuracoes da classe btn para essa
+    @extend .btn;
+    background: lighten($primary-color,50);
+    color: #333;
 }
 
 #main-footer{
